working function & styling for list tobe vis/hide

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <form>
       <label for="search">🔎</label>
       <input id="search" type="text" />
-      <input type="submit" value="Search" id="submit" onclick="clicked()" />
+      <input
+        type="submit"
+        value="Search"
+        id="submit"
+        onclick="clicked(event)"
+      />
     </form>
     <ul id="gamesList"></ul>
   </body>
 </html>
-
