created filter for both entries & for of loop

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body onload="loadNames()">
     <form>
-      <label for="search">🔎</label>
+      <label for="search">🔎 Game:</label>
       <input id="search" type="text" />
+      <!--what gets typed in-->
+      <label for="search">Run time: </label>
+      <input id="runTime" type="text" /><!--what gets typed in-->
       <input
         type="submit"
         value="Search"
